--- a/api/purchase/models/purchase.settings.json
+++ b/api/purchase/models/purchase.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "purchases",
   "info": {
-    "name": "Purchase"
+    "name": "Purchase",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -15,6 +16,10 @@
     },
     "Amount": {
       "type": "decimal"
+    },
+    "User": {
+      "plugin": "users-permissions",
+      "model": "user"
     }
   }
 }
